--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "typedi": "^0.8.0",
       "typeorm": "0.2.17",
       "typeorm-typedi-extensions": "^0.2.3",
+      "xss": "1.0.6",
       "winston": "^3.2.1"
    },
    "devDependencies": {
